# ezpyupload

./: FAQ.md  README.md  pyproject.toml
src/ezpyupload/: __main__.py
