[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezpyupload"
version = "1.0.0"
description = "GUI tool to upload packages to PyPI"
authors = [{name = "Gabyface910"}]
requires-python = ">=3.7"
dependencies = [
    "build",
    "twine",
    "pysimplegui"
]

[tool.setuptools.packages.find]
where = ["src"]
