[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezpyupload"
version = "2.0.3"
description = "GUI tool to upload packages to PyPI"
authors = [{name = "Gabyface910"}]
requires-python = ">=3.7"
dependencies = [
    "build",
    "twine"
]

[tool.setuptools.packages.find]
where = ["src"]
